[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/common/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Menu.gd" type="Script" id=2]

[node name="Menu" type="CanvasLayer"]
layer = 10
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Control/HBox"]
margin_right = 250.0
margin_bottom = 250.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Control/HBox/VBox"]
margin_right = 250.0
margin_bottom = 80.0
size_flags_vertical = 3
text = "PLAY"

[node name="OptionsButton" type="Button" parent="Control/HBox/VBox"]
margin_top = 84.0
margin_right = 250.0
margin_bottom = 165.0
size_flags_vertical = 3
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="Control/HBox/VBox"]
margin_top = 169.0
margin_right = 250.0
margin_bottom = 250.0
size_flags_vertical = 3
text = "QUIT"

[connection signal="pressed" from="Control/HBox/VBox/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/HBox/VBox/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Control/HBox/VBox/QuitButton" to="." method="_on_QuitButton_pressed"]
